Project

General

Profile

Actions

Bug #20762

closed

`make test-basic` with -DRGENGC_FORCE_MAJOR_GC is always failure

Bug #20762: `make test-basic` with -DRGENGC_FORCE_MAJOR_GC is always failure

Added by hsbt (Hiroshi SHIBATA) almost 2 years ago. Updated almost 2 years ago.

Status:
Closed
Target version:
-
[ruby-core:119312]

Description

https://github.com/ruby/ruby/actions/runs/11063957302/job/30741993035#step:8:1816


/github/workspace/src/basictest/test.rb:2357: [BUG] cannot create a new page after major GC
  ruby 3.4.0dev (2024-09-27T03:22:52Z pull/11217/merge cfa3f15e14) +PRISM [x86_64-linux]
  
  -- Control frame information -----------------------------------------------
  c:0004 p:0004 s:0057 e:000055 BLOCK  /github/workspace/src/basictest/test.rb:2357 [FINISH]
    self: (embed) len:3
    lvars:
      o: (String) len: 7, capa: 15 "select!"
  c:0003 p:---- s:0052 e:000051 CFUNC  :each_object
    me:
      called_id: each_object, type: cfunc
      owner class: (anon)
    self: ObjectSpace
  c:0002 p:15612 s:0048 E:002140 EVAL   /github/workspace/src/basictest/test.rb:2356 [FINISH]
    self: (embed) len:3
    lvars:
      a: T_FIXNUM 1
      h: (Hash)[A] 1
      aa: T_FIXNUM 5
      bb: T_FIXNUM 25
      cc: T_FIXNUM 44
      b: (Binding)binding
      c: T_FIXNUM 3
      f: (Foo)(embed) len:3
      x: (Alias3)(embed) len:3
      y: T_FIXNUM 2
      z: T_NIL
      while_tmp: (String) len: 15, capa: 55 "while_tmp.52326"
      tmp: T_NIL
      line: (String) len: 7, capa: 15 "tvi925
  "
      lastline: (String) len: 6, capa: 15 "paper
  "
      sum: T_FIXNUM 220
      i: T_FIXNUM 5
      e: (RuntimeError)(embed) len:8
      k: T_FIXNUM 3
      v: T_FIXNUM 6
      done: T_TRUE
      m: (MatchData)
      blk: (Proc) block in <main>@/github/workspace/src/basictest/test.rb:1207
      lmd: (Proc) block in <main>@/github/workspace/src/basictest/test.rb:1213
      nan: (Float)
      n1: (Integer)
      n2: (Integer)
      foo: T_FIXNUM 5
      s: (String) len: 6, capa: 15 "1,2,3
  "
      d: T_FIXNUM 4
      p1: (Binding)binding
      i7: T_NIL
      script_tmp: (String) len: 16, capa: 55 "script_tmp.52326"
      bar: (embed) len:3
      ary: (Array)[E ] len: 11 (embed)
      ary2: (Array)[  ] len: 11, capa:20 ptr:0x000055c64bd8e960
      struct_test: Struct::Test
      test: (Struct::Test)
      foobar: (String) len: 6, capa: 15 "foobar"
      atlas: (Titans)(embed) len:3
      dosish: T_NIL
      l: (Array)[  ] len: 100000, capa:127694 ptr:0x00007fb4d72ea010
  c:0001 p:0000 s:0003 E:0012a0 DUMMY  [FINISH]
    self: (embed) len:3
  
  -- Ruby level backtrace information ----------------------------------------
  /github/workspace/src/basictest/test.rb:2356:in '<main>'
  /github/workspace/src/basictest/test.rb:2356:in 'each_object'
  /github/workspace/src/basictest/test.rb:2357:in 'block in <main>'
  
  -- Threading information ---------------------------------------------------
  Total ractor count: 1
  Ruby thread count for this ractor: 1
  
  -- C level backtrace information -------------------------------------------
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_print_backtrace+0x14) [0x7fb4f2db5e3c] /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm_dump.c:822
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_vm_bugreport) /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm_dump.c:1151
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_bug_without_die+0xe8) [0x7fb4f2c01318] /tmp/tmp.WEBb0YaZEC//github/workspace/src/error.c:1084
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_bug+0x80) [0x7fb4f2b506d3] /tmp/tmp.WEBb0YaZEC//github/workspace/src/error.c:1092
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(newobj_cache_miss+0x4bf) [0x7fb4f2c2381f] /github/workspace/src/gc/default.c:2169
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(newobj_of+0x264) [0x7fb4f2c18f04] /github/workspace/src/gc/default.c:2478
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_wb_protected_newobj_of+0x25) [0x7fb4f2c18f55] /tmp/tmp.WEBb0YaZEC//github/workspace/src/gc.c:917
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_cc_new+0xd) [0x7fb4f2d869d3] /github/workspace/src/vm_callinfo.h:334
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_search_cc) /github/workspace/src/vm_insnhelper.c:2177
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_vm_search_method_slowpath) /github/workspace/src/vm_insnhelper.c:2196
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_search_method_slowpath0+0x8) [0x7fb4f2d8c7c6] /github/workspace/src/vm_insnhelper.c:2217
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_search_method_fastpath) /github/workspace/src/vm_insnhelper.c:2278
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_sendish) /github/workspace/src/vm_insnhelper.c:5954
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_exec_core) /tmp/tmp.WEBb0YaZEC/insns.def:898
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_exec_loop+0x0) [0x7fb4f2d88dc6] /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:2564
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_vm_exec) /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:2567
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(invoke_block_from_c_bh+0x3cb) [0x7fb4f2db01cb] /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:1595
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_yield_with_cref+0x45) [0x7fb4f2d97ca5] /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:1646
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_yield) /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:1654
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_yield_0) /github/workspace/src/vm_eval.c:1344
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_yield) /github/workspace/src/vm_eval.c:1360
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(os_obj_of_i+0x38) [0x7fb4f2c2b438] /tmp/tmp.WEBb0YaZEC//github/workspace/src/gc.c:1372
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(objspace_each_objects_try+0x135) [0x7fb4f2c29995] /github/workspace/src/gc/default.c:2772
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_ensure+0xe1) [0x7fb4f2c0ac81] /tmp/tmp.WEBb0YaZEC//github/workspace/src/eval.c:1053
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(objspace_each_objects+0xa3) [0x7fb4f2c2222a] /github/workspace/src/gc/default.c:2803
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_gc_impl_each_objects) /github/workspace/src/gc/default.c:2822
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_objspace_each_objects) /tmp/tmp.WEBb0YaZEC//github/workspace/src/gc.c:2885
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(os_each_obj) /tmp/tmp.WEBb0YaZEC//github/workspace/src/gc.c:1389
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_cfp_consistent_p+0x0) [0x7fb4f2da7e02] /github/workspace/src/vm_insnhelper.c:3788
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_call_cfunc_with_frame_) /github/workspace/src/vm_insnhelper.c:3790
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(RB_UNDEF_P+0x0) [0x7fb4f2d8bfe4] /github/workspace/src/vm_insnhelper.c:5955
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_exec_core) /tmp/tmp.WEBb0YaZEC/insns.def:852
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(vm_exec_loop+0xac) [0x7fb4f2d88d34] /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:2591
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_vm_exec) /tmp/tmp.WEBb0YaZEC//github/workspace/src/vm.c:2570
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(rb_ec_exec_node+0x3a) [0x7fb4f2c09cd4] /tmp/tmp.WEBb0YaZEC//github/workspace/src/eval.c:281
  /tmp/tmp.WEBb0YaZEC/libruby.so.3.4(ruby_run_node) /tmp/tmp.WEBb0YaZEC//github/workspace/src/eval.c:319
  /tmp/tmp.WEBb0YaZEC/ruby(rb_main+0x1c) [0x55c64a844249] /tmp/tmp.WEBb0YaZEC//github/workspace/src/main.c:43
  /tmp/tmp.WEBb0YaZEC/ruby(main) /tmp/tmp.WEBb0YaZEC//github/workspace/src/main.c:62
  /lib/x86_64-linux-gnu/libc.so.6(__libc_start_call_main+0x80) [0x7fb4f27bed90] ../sysdeps/nptl/libc_start_call_main.h:58
  /lib/x86_64-linux-gnu/libc.so.6(call_init+0x0) [0x7fb4f27bee40] ../csu/libc-start.c:392
  /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main_impl) ../csu/libc-start.c:379
  /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main) (null):0
  /tmp/tmp.WEBb0YaZEC/ruby(_start) [0x55c64a8440f5]
  (snip)
Actions

Also available in: PDF Atom